package Trabalho_OO.src.entidades;

public class StatusReserva {
    
}
