package excecoes;

public class DiasExcedidosException extends Exception {
    public DiasExcedidosException(String mensagem) {
        super(mensagem);
    }
}
